--- a/4_BOX_MODEL/2_padding_margin/style.css
+++ b/4_BOX_MODEL/2_padding_margin/style.css
@@ -1,3 +1,7 @@
+*{
+    margin: 0;
+}
+
 div{
     border: 4px dotted #00f;
     width: fit-content;
@@ -27,4 +31,21 @@ div{
     /* padding na horizontal */
     padding-block: 20px;
     /* padding na vertical */
+}
+
+h1 {
+    border: 1px solid red;
+    margin-bottom: 20px;
+}
+
+.algum {
+    margin-bottom: 100px;
+}
+
+.ultimo {
+    margin-top: 50px;
+}
+
+.outro {
+    margin-inline: auto;
 }
